# image-preprocess

./: .gitignore  README.md  package-lock.json
backend/: main.py  pyproject.toml
backend/src/: __init__.py  app.py
backend/src/controllers/: __init__.py  health_controller.py  image_controller.py  user_controller.py
backend/src/entity/: __init__.py  response.py  user.py
backend/src/middlewares/: __init__.py  cors.py
backend/src/models/: __init__.py  image_processor.py  image_processor_manager.py
backend/src/models/processors/: __init__.py  color_processors.py  contour_processors.py  enhancement_processors.py  filter_processors.py  morphology_processors.py
backend/src/services/: __init__.py  image_service.py  user_service.py
frontend/: components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.js
frontend/src/components/: FunctionPanel.vue  ImageUploader.vue  PreviewBox.vue
frontend/src/pages/: index.vue
