[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.3",
]

[[tool.uv.index]]
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true
